update to single page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 				hoverPause: true
 			});
 		});
+
+		$(".overlay").click(function(){
+     			window.location=$(this).find("a").attr("href");
+     			return false;
+		});
+		
+
 	</script>
 
 </head>
@@ -84,7 +91,7 @@
 		<!--	<div class="banner"></div> we can use this later-->
 			<div class="pic" style="background-image: url('images/Wedding-Hall.jpg')"><!-- Image goes here, need to style --> 
 				<div class="overlay">
-				<h2>Aaron Hall</h2>
+				<h2><a href="single.html">Aaron Hall</a></h2>
 				<p>
 					Classical, flexible hotel.
 				</p>
@@ -169,7 +176,7 @@
 
 
 
-<div class="slide" id="slide2">
+<div class="slide single" id="slide2">
 	<table class="title"><tr>
 		<th><img src="images/empty.gif" /></th>
 		<td width=260><h1>Aaron Hall</h1></td>
@@ -441,19 +448,6 @@
 	</div> --> <!-- .transition -->
 </div> <!-- #slide11 -->
 
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-26807250-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 
 </body>
 </html>
