--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 		<link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,600,700' rel='stylesheet' type='text/css'>
 
-
-
 		
 		<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
 		<script type="text/javascript" src="js/waypoints.min.js"></script>
@@ -75,7 +73,7 @@
 </tr></table> <!-- #nav -->
 
 
-
+<!-- end of top part -->
 
 
 
